--- a/web-server/public/login.html
+++ b/web-server/public/login.html
@@ -55,6 +55,8 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bs58@5.0.0/bs58.js"></script>
+  <script src="/js/utils.js"></script>
   <script>
     // Get URL parameters
     const urlParams = new URLSearchParams(window.location.search);
@@ -121,8 +123,7 @@
         }
 
         // Show loading state
-        contentEl.style.display = 'none';
-        loadingEl.style.display = 'block';
+        showLoading();
 
         // Double check session parameters
         if (!sessionId || !nonce) {
@@ -147,91 +148,12 @@
           }
         }
 
-        // Connect to wallet
-        let publicKey;
-        try {
-          // Try to get the current connection first
-          const resp = await provider.request({ method: 'connect' });
-          publicKey = resp.publicKey.toString();
-          console.log('Already connected to Phantom:', publicKey);
-        } catch (e) {
-          // If not connected, connect to wallet
-          console.log('Connecting to Phantom...');
-          const connection = await provider.connect();
-          publicKey = connection.publicKey.toString();
-        }
+        // Connect to wallet using PhantomUtils
+        const publicKey = await PhantomUtils.connect();
 
-        // Sign message
+        // Sign message using PhantomUtils
         const message = `Verify wallet ownership for Minecraft login. Session: ${sessionId}. Nonce: ${nonce}`;
-        console.log('Signing message:', message);
-        const encodedMessage = new TextEncoder().encode(message);
-
-        // Initialize signature variable
-        let signature = '';
-
-        try {
-          // Get signature from Phantom
-          console.log('Requesting signature from Phantom...');
-          const signResult = await provider.signMessage(encodedMessage, 'utf8');
-          console.log('Received signature response from Phantom');
-
-          // Inspect what we got back
-          console.log('Signature result type:', typeof signResult);
-          if (typeof signResult === 'object') {
-            console.log('Signature result keys:', Object.keys(signResult).join(', '));
-          }
-
-          // Different ways to handle the signature based on what Phantom returns
-          let signatureBytes;
-
-          if (signResult instanceof Uint8Array) {
-            // Case 1: Phantom returned a Uint8Array directly
-            signatureBytes = signResult;
-            console.log('Got Uint8Array signature of length', signatureBytes.length);
-          } else if (typeof signResult === 'object' && signResult.signature) {
-            // Case 2: Phantom returned an object with a signature property
-            signatureBytes = signResult.signature;
-            console.log('Got signature from result.signature property');
-          } else if (typeof signResult === 'string') {
-            // Case 3: Phantom returned a string
-            signature = signResult;
-            console.log('Got string signature of length', signature.length);
-          } else {
-            // Case 4: Unknown format, try to stringify it
-            console.log('Unknown signature format:', JSON.stringify(signResult));
-            signature = JSON.stringify(signResult);
-          }
-
-          // If we have signature bytes, convert them to a string
-          if (signatureBytes && !signature) {
-            try {
-              // Try bs58 encoding if available
-              if (typeof bs58 !== 'undefined' && bs58.encode) {
-                signature = bs58.encode(signatureBytes);
-                console.log('Converted signature using bs58');
-              } else {
-                // Try to convert to base64
-                signature = btoa(Array.from(signatureBytes).map(b => String.fromCharCode(b)).join(''));
-                console.log('Converted signature to base64, length:', signature.length);
-              }
-            } catch (e) {
-              console.error('Error converting signature:', e);
-              // Fallback to hex
-              signature = Array.from(signatureBytes).map(b => b.toString(16).padStart(2, '0')).join('');
-              console.log('Fallback: Converted signature to hex, length:', signature.length);
-            }
-          }
-
-          // Ensure we have a signature
-          if (!signature) {
-            throw new Error('Failed to get a valid signature from Phantom');
-          }
-
-          console.log('Final signature length:', signature.length);
-        } catch (error) {
-          console.error('Error signing message:', error);
-          throw error; // Re-throw to be caught by the outer try/catch
-        }
+        const signature = await PhantomUtils.signMessage(message);
 
         // Verify signature on server
         const response = await fetch('/api/verify', {
@@ -267,24 +189,17 @@
       window.location.reload();
     });
 
-    // Show success
+    // UI utility functions
     function showSuccess(walletAddress) {
-      loadingEl.style.display = 'none';
-      contentEl.style.display = 'none';
-      errorEl.style.display = 'none';
-      successEl.style.display = 'block';
-
-      walletAddressEl.textContent = walletAddress;
+      UIUtils.showSuccess(walletAddress, successEl, walletAddressEl, loadingEl, contentEl, errorEl);
     }
 
-    // Show error
     function showError(message) {
-      loadingEl.style.display = 'none';
-      contentEl.style.display = 'none';
-      successEl.style.display = 'none';
-      errorEl.style.display = 'block';
+      UIUtils.showError(message, errorEl, errorMessageEl, loadingEl, contentEl, successEl);
+    }
 
-      errorMessageEl.textContent = message;
+    function showLoading() {
+      UIUtils.showLoading(loadingEl, contentEl, errorEl, successEl);
     }
   </script>
 </body>
