--- a/Webserver/public/login.html
+++ b/Webserver/public/login.html
@@ -8,7 +8,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Roboto+Mono&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bs58@5.0.0/dist/index.min.js"></script>
-  <script src="https://unpkg.com/bs58@5.0.0/dist/index.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -29,18 +28,13 @@
             <p><strong>Player:</strong> <span id="player-id">Loading...</span></p>
             <p>Choose how you want to connect your Solana wallet</p>
           </div>
-
           <div class="connect-options">
             <button id="connect-button" class="btn btn-primary">
               <i class="fas fa-wallet" style="margin-right: 10px;"></i> Connect with Phantom
             </button>
-
-            <div class="divider">
-              <span>OR</span>
-            </div>
-
+            <div class="divider"><span>OR</span></div>
             <a href="#" id="show-qr-button" class="btn btn-secondary">
-              <i class="fas fa-qrcode" style="margin-right: 10px;"></i> Scan QR with Mobile Wallet
+              <i class="fas fa-qrcode" style="margin-right: 10px;"></i> Scan QR
             </a>
           </div>
         </div>
@@ -71,152 +65,114 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bs58@5.0.0/bs58.js"></script>
   <script src="/js/utils.js"></script>
   <script>
-    // Get URL parameters
-    const urlParams = new URLSearchParams(window.location.search);
-    let sessionId = urlParams.get('session');
-    let nonce = urlParams.get('nonce');
-    const playerId = urlParams.get('player');
+    // Parse URL parameters
+    const params = new URLSearchParams(window.location.search);
+    let sessionId = params.get('session');
+    let nonce     = params.get('nonce');
+    const playerId = params.get('player');
 
-    // Debug info
-    console.log('URL parameters:', { sessionId, nonce, playerId });
-
-    // Elements
-    const loadingEl = document.getElementById('loading');
-    const contentEl = document.getElementById('content');
-    const successEl = document.getElementById('success');
-    const errorEl = document.getElementById('error');
-    const playerIdEl = document.getElementById('player-id');
+    // DOM elements
+    const loadingEl       = document.getElementById('loading');
+    const contentEl       = document.getElementById('content');
+    const successEl       = document.getElementById('success');
+    const errorEl         = document.getElementById('error');
+    const playerIdEl      = document.getElementById('player-id');
     const walletAddressEl = document.getElementById('wallet-address');
-    const errorMessageEl = document.getElementById('error-message');
-    const connectButton = document.getElementById('connect-button');
-    const showQrButton = document.getElementById('show-qr-button');
-    const retryButton = document.getElementById('retry-button');
+    const errorMessageEl  = document.getElementById('error-message');
+    const connectButton   = document.getElementById('connect-button');
+    const showQrButton    = document.getElementById('show-qr-button');
+    const retryButton     = document.getElementById('retry-button');
 
-    // Initialize
-    document.addEventListener('DOMContentLoaded', async () => {
-      // Log parameters for debugging
-      console.log('DOMContentLoaded with parameters:', { sessionId, nonce, playerId });
-
-      if (!sessionId || !nonce || !playerId) {
-        console.warn('Missing parameters, will try to continue anyway');
-        // We'll try to continue and let the server handle it
-      }
-
-      playerIdEl.textContent = playerId;
-
-      // Check if session exists
+    // Helper: poll /status continuously
+    async function pollStatus() {
       try {
-        const response = await fetch(`/api/session/${sessionId}`);
-        if (!response.ok) {
-          throw new Error('Session not found');
+        const res = await fetch(`/status?session=${sessionId}`);
+        if (res.ok) {
+          const { connected, walletAddress } = await res.json();
+          if (connected) {
+            console.log('pollStatus: connected', walletAddress);
+            showSuccess(walletAddress);
+            return;
+          }
         }
+      } catch (e) {
+        console.error('pollStatus error', e);
+      }
+      setTimeout(pollStatus, 2000);
+    }
 
-        const data = await response.json();
+    // Override showSuccess to begin polling immediately
+    function showSuccess(addr) {
+      UIUtils.showSuccess(addr, successEl, walletAddressEl, loadingEl, contentEl, errorEl);
+      pollStatus();
+    }
+
+    function showError(msg) {
+      UIUtils.showError(msg, errorEl, errorMessageEl, loadingEl, contentEl, successEl);
+    }
+
+    function showLoading() {
+      UIUtils.showLoading(loadingEl, contentEl, errorEl, successEl);
+    }
+
+    // Initialize on DOM ready
+    document.addEventListener('DOMContentLoaded', async () => {
+      playerIdEl.textContent = playerId || 'Unknown';
+      // Immediately start polling so plugin sees session alive
+      pollStatus();
+
+      // Check initial session state
+      try {
+        const resp = await fetch(`/api/session/${sessionId}`);
+        if (!resp.ok) throw new Error('Session not found');
+        const data = await resp.json();
         if (data.connected) {
           showSuccess(data.walletAddress);
           return;
         }
-
-        // Show content
         loadingEl.style.display = 'none';
         contentEl.style.display = 'block';
-      } catch (error) {
-        showError(error.message);
+      } catch (err) {
+        showError(err.message);
       }
     });
 
     // Connect with Phantom
     connectButton.addEventListener('click', async () => {
       try {
-        // Check if Phantom is installed
-        const provider = window.phantom?.solana;
-        if (!provider) {
-          showError('Phantom extension not found. Please install it first.');
-          return;
-        }
-
-        // Show loading state
         showLoading();
-
-        // Double check session parameters
-        if (!sessionId || !nonce) {
-          // Try to get session data from server
-          try {
-            const response = await fetch(`/api/session/${sessionId}`);
-            if (!response.ok) {
-              throw new Error('Session not found or expired');
-            }
-            // If we get here, session exists but might be missing nonce
-            if (!nonce) {
-              const nonceResponse = await fetch(`/api/nonce/${sessionId}`);
-              if (!nonceResponse.ok) {
-                throw new Error('Failed to get nonce');
-              }
-              const nonceData = await nonceResponse.json();
-              nonce = nonceData.nonce;
-            }
-          } catch (error) {
-            showError('Session error: ' + error.message);
-            return;
-          }
-        }
-
-        // Connect to wallet using PhantomUtils
         const publicKey = await PhantomUtils.connect();
-
-        // Sign message using PhantomUtils
+        // Ensure nonce exists
+        if (!nonce) {
+          const nresp = await fetch(`/api/nonce/${sessionId}`);
+          if (!nresp.ok) throw new Error('Failed to fetch nonce');
+          nonce = (await nresp.json()).nonce;
+        }
         const message = `Verify wallet ownership for Minecraft login. Session: ${sessionId}. Nonce: ${nonce}`;
         const signature = await PhantomUtils.signMessage(message);
-
-        // Verify signature on server
-        const response = await fetch('/api/verify', {
+        const vresp = await fetch('/api/verify', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            session: sessionId,
-            publicKey,
-            signature,
-            message
-          })
+          body: JSON.stringify({ session: sessionId, publicKey, signature, message })
         });
-
-        const result = await response.json();
-        if (result.success) {
-          showSuccess(publicKey);
-        } else {
-          showError(result.error || 'Failed to verify wallet. Please try again.');
-        }
-      } catch (error) {
-        showError(error.message);
+        const result = await vresp.json();
+        if (result.success) showSuccess(publicKey);
+        else showError(result.error || 'Verification failed');
+      } catch (err) {
+        showError(err.message);
       }
     });
 
-    // Show QR code
-    showQrButton.addEventListener('click', (e) => {
+    // QR option
+    showQrButton.addEventListener('click', e => {
       e.preventDefault();
       window.location.href = `${window.location.pathname}?session=${sessionId}&nonce=${nonce}&player=${playerId}&qr=true`;
     });
 
-    // Retry button
-    retryButton.addEventListener('click', () => {
-      window.location.reload();
-    });
-
-    // UI utility functions
-    function showSuccess(walletAddress) {
-      UIUtils.showSuccess(walletAddress, successEl, walletAddressEl, loadingEl, contentEl, errorEl);
-    }
-
-    function showError(message) {
-      UIUtils.showError(message, errorEl, errorMessageEl, loadingEl, contentEl, successEl);
-    }
-
-    function showLoading() {
-      UIUtils.showLoading(loadingEl, contentEl, errorEl, successEl);
-    }
+    // Retry reload
+    retryButton.addEventListener('click', () => location.reload());
   </script>
 </body>
 </html>
